--- a/css/main.bundle.css
+++ b/css/main.bundle.css
@@ -1033,6 +1033,10 @@ a.has-text-black:hover {
     background-color: #0a0a0a !important
 }
 
+.has-text-blue {
+    color: #a6e8f7 !important
+}
+
 .has-text-light {
     color: #f5f5f5 !important
 }
